--- a/Text/index.html
+++ b/Text/index.html
@@ -10,7 +10,7 @@
         <p>
         Les trois petits cochons 1 Nurvero – La vie en classe Il était une fois
         trois petits cochons. Ils vivaient dans une jolie maison avec leur maman.
-        Ils s'appelaient Nif-nif, .... et ...... Nif-nif aimait rêver, Naf-naf
+        Ils s'appelaient Nif-nif, Naf-Naf et ...... Nif-nif aimait rêver, Naf-naf
         aimait jouer et Nouf-nouf aimait bricoler. Mais la maison était petite. La
         maman dit : « Il est temps de faire votre vie »
         </p>
