--- a/Text/index.html
+++ b/Text/index.html
@@ -12,22 +12,12 @@
         Nurvero – La vie en classe
         Il était une fois trois petits cochons.
         Ils vivaient dans une jolie maison avec leur maman.
-        Ils s'appelaient Nif-nif, .... et Nouf-nouf.
+        Ils s'appelaient Nif-nif, .... et .....
         Nif-nif aimait rêver, Naf-naf aimait jouer et Nouf-nouf
         aimait bricoler.
         Mais la maison était petite.
         La maman dit : « Il est temps de faire votre vie »
     </p>
 
-    <!-- page 3 -->
-    <p>Les trois petits cochons étaient dans leur maison.
-        Tout à coup, Nif-nif vit le loup.
-        Il courut aussi vite qu'il put vers son abri de paille.
-        «  ouvre!  » hurla le loup.
-        «  Non!  » répondit le cochon.
-        «  Tu l'auras voulu !  » cria le loup.
-        Il souffla si fort que toute la paille s'envola.
-        Nif-nif courut vite chez Naf-naf.</p>
-    
 </body>
 </html>
