--- a/Text/index.html
+++ b/Text/index.html
@@ -12,11 +12,22 @@
         Nurvero – La vie en classe
         Il était une fois trois petits cochons.
         Ils vivaient dans une jolie maison avec leur maman.
-        Ils s'appelaient Nif-nif, .... et Nouf-nouf.
+        Ils s'appelaient Nif-nif, Naf-Naf et Nouf-nouf.
         Nif-nif aimait rêver, Naf-naf aimait jouer et Nouf-nouf
         aimait bricoler.
         Mais la maison était petite.
         La maman dit : « Il est temps de faire votre vie »
+    </p>
+
+    <!-- page 2  -->
+    <p>
+        Les trois petits cochons ont peur du loup.
+        Ils vont vite construire une maison.
+        Nif-nif se construit un abri en paille, joli, mais pas
+        solide.
+        Naf-naf se construit une cabane en bois, jolie, mais pas
+        solide non plus.
+        Nouf-nouf se construit une vraie maison, jolie et solide.
     </p>
 
     <!-- page 3 -->
