--- a/Text/index.html
+++ b/Text/index.html
@@ -12,7 +12,7 @@
         Nurvero – La vie en classe
         Il était une fois trois petits cochons.
         Ils vivaient dans une jolie maison avec leur maman.
-        Ils s'appelaient Nif-nif, .... et .....
+        Ils s'appelaient Nif-nif, .... et Nouf-nouf.
         Nif-nif aimait rêver, Naf-naf aimait jouer et Nouf-nouf
         aimait bricoler.
         Mais la maison était petite.
